[CIVIC-1043] Fixed primary navigation menu item open states and spacing.

--- a/docroot/themes/contrib/civictheme/civictheme_library/components/00-base/_variables.components.scss
+++ b/docroot/themes/contrib/civictheme/civictheme_library/components/00-base/_variables.components.scss
@@ -982,11 +982,11 @@ $civictheme-primary-navigation-light-sub-menu-background-color: civictheme-color
 $civictheme-primary-navigation-light-sub-menu-item-background-color: transparent !default;
 $civictheme-primary-navigation-light-sub-menu-item-heading-color: civictheme-color-light('heading') !default;
 $civictheme-primary-navigation-light-sub-menu-item-heading-hover-color: civictheme-color-light('heading') !default;
-$civictheme-primary-navigation-light-sub-menu-item-heading-active-color: civictheme-color-light('background') !default;
+$civictheme-primary-navigation-light-sub-menu-item-heading-active-color: civictheme-color-light('heading') !default;
 $civictheme-primary-navigation-light-sub-menu-item-color: civictheme-color-light('interaction-background') !default;
 $civictheme-primary-navigation-light-sub-menu-item-hover-background-color: civictheme-color-light('interaction-hover-background') !default;
 $civictheme-primary-navigation-light-sub-menu-item-hover-color: civictheme-color-light('interaction-hover-text') !default;
-$civictheme-primary-navigation-light-sub-menu-item-active-background-color: civictheme-color-light('background') !default;
+$civictheme-primary-navigation-light-sub-menu-item-active-background-color: civictheme-color-light('body') !default;
 $civictheme-primary-navigation-light-sub-menu-item-active-color: civictheme-color-light('background') !default;
 $civictheme-primary-navigation-dark-border-color: civictheme-color-dark('interaction-background') !default;
 $civictheme-primary-navigation-dark-color: civictheme-color-dark('interaction-background') !default;
@@ -1004,11 +1004,11 @@ $civictheme-primary-navigation-dark-sub-menu-background-color: civictheme-color-
 $civictheme-primary-navigation-dark-sub-menu-item-background-color: transparent !default;
 $civictheme-primary-navigation-dark-sub-menu-item-heading-color: civictheme-color-dark('heading') !default;
 $civictheme-primary-navigation-dark-sub-menu-item-heading-hover-color: civictheme-color-dark('heading') !default;
-$civictheme-primary-navigation-dark-sub-menu-item-heading-active-color: civictheme-color-dark('background') !default;
+$civictheme-primary-navigation-dark-sub-menu-item-heading-active-color: civictheme-color-dark('heading') !default;
 $civictheme-primary-navigation-dark-sub-menu-item-color: civictheme-color-dark('interaction-background') !default;
 $civictheme-primary-navigation-dark-sub-menu-item-hover-background-color: civictheme-color-dark('interaction-hover-background') !default;
 $civictheme-primary-navigation-dark-sub-menu-item-hover-color: civictheme-color-dark('interaction-hover-text') !default;
-$civictheme-primary-navigation-dark-sub-menu-item-active-background-color: civictheme-color-dark('background') !default;
+$civictheme-primary-navigation-dark-sub-menu-item-active-background-color: civictheme-color-dark('body') !default;
 $civictheme-primary-navigation-dark-sub-menu-item-active-color: civictheme-color-dark('background') !default;
 
 //
